<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Edustack</string>
    <string name="select">Select items</string>

    <!-- Notification Settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_enable_notifications">Enable notifications</string>
    <string name="pref_summary_notifications">Toggle all app notifications</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>

    <!-- Menu Items -->
    <string name="menu_Classes">Class</string>
    <string name="menu_Attendance">Attendance</string>
    <string name="menu_Results">Results</string>
    <string name="menu_Camera">Camera</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- Titles -->
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="title_class">Class</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_results">Results</string>
    <string name="title_camera">Camera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_students_main">Students_MainActivity</string>
    <string name="title_classes">Classes</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_calender">Calender</string>
    <string name="title_settings">Settings</string>
    <string name="title_CourseDetails">Course Details</string>
</resources>
