<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_class">

    <fragment
        android:id="@+id/navigation_class"
        android:name="com.edustack.edustack.ui.Classes.ClassFragment"
        android:label="@string/title_class"
        tools:layout="@layout/fragment_class" />

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.edustack.edustack.ui.Attendance.AttendanceFragment"
        android:label="@string/title_attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/navigation_results"
        android:name="com.edustack.edustack.ui.Results.ResultFragment"
        android:label="@string/title_results"
        tools:layout="@layout/fragment_results" />
    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.edustack.edustack.ui.CameraQr.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />
</navigation>